# ML_Scientist_CrewAi

./: .gitignore  README.md  pyproject.toml
src/: final_report.md  final_report1.md  requirements.txt
src/ml_scientist_crew/: crew.py  main.py
src/ml_scientist_crew/config/: agents.yaml  tasks.yaml
src/ml_scientist_crew/data/: titanic.csv
src/ml_scientist_crew/tools/: data_tools.py  model_tools.py  problem_tools.py  target_tools.py
