[project]
name = "ml_scientist_crew"
version = "0.1.0"
description = "ML_scientist_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "selenium>=4.39.0",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
ml_scientist_crew = "ml_scientist_crew.main:run"
run_crew = "ml_scientist_crew.main:run"
train = "ml_scientist_crew.main:train"
replay = "ml_scientist_crew.main:replay"
test = "ml_scientist_crew.main:test"
run_with_trigger = "ml_scientist_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
